react-app/src/components/login-signup/login-signup.css
.login-signup-outer {
    width: 100%;
    background-color: white;
    color:black;
    height: 100vh; /*change to match height of forms?*/
    display: flex;
    justify-content: center;
}

.login-signup-container {
    width: 80%;
}

.login-header {
    font-size: 35px;
    margin-bottom: 40px;
    margin-top: 20px;
    margin-left: 8%;
}

.login-and-signup-container {
    display: flex;
    flex-direction: row;
    justify-content: center;
}

.returning-cust,
.new-cust {
    font-weight: normal;
    font-size: 16px;
}

.login-container {
    margin-right: 50px;
}

.mapped-errors {
    color: red;
}

.signup-container {
    margin-left: 50px;
}

.vertical-separator-container {
    display: flex;
    align-items: center;
    justify-content: center;
}

.vertical-separator {
    background-color: white;
    display: flex;
    align-items: center;
    justify-content: center;
    position: absolute;
    top: 270px;
    font-size: 12px;
    z-index: 1;
    height: 25px;
}

.vertical-line {
    width: 1px;
    background-color: #e1e1e1;
    height: 290px;
    position: absolute;
    top: 220px;
}

.first-last-name-container {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.first-name-container,
.last-name-container,
.password-container,
.email-container {
   display: flex;
   flex-direction: column;
   margin-bottom: 20px;
}

.first-name-label,
.last-name-label,
.email-label,
.password-label {
    font-size: 12px;
    font-weight: 700;
    margin-bottom: 3px;
}

.email-input-field,
.password-input-field {
    height: 25px;
    width: 270px;
    border-radius: 0;
    border: 1px solid #acacac;
}

.first-name-input-field,
.last-name-input-field {
    height: 25px;
    width: 120px;
    border-radius: 0;
    border: 1px solid #acacac;
}

.login-signup-button {
    border: solid 1px #06a7e2;
    border-radius: 3px;
    background-color: black;
    color: #06a7e2;
    font-size: 18px;
    font-weight: 300;
    padding-left: 30px;
    padding-right: 30px;
    height:40px
}

.space {
    margin-top: 20px;
}

